apps/rancher/rancher-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rancher-vs
  namespace: cattle-system
spec:
  hosts:
  - "rancher.jacky3.com"
  gateways:
  - rancher-gateway
  tls:
  - match:
    - port: 443
      sniHosts:
      - rancher.jacky3.com
    route:
    - destination:
        host: rancher.cattle-system.svc.cluster.local
        port:
          number: 443
